# hoomd-sph3

./: .gitignore  .gitmodules  2Aggregates.ipynb  README.md  addsphpath.sh  build_wolfgang.sh  buildall.sh  fast_buildall.sh  link_pgsd_module.sh  requirements.txt
dependencies/: .gitignore
dependencies/gsd-2.5.3/gsd/: hoomd.py
dependencies/gsd-2.7.0/gsd/: __init__.py  fl.pyx  gsd.c  hoomd.py  pygsd.py
dependencies/gsd-3.2.0/: .gitignore
dependencies/gsd2vtu/: auxgsd2vtu.py  export_gsd2vtu.py  gsd2vtu.py  spfgsd2vtu.py
dependencies/pgsd-3.2.0/: CHANGELOG.rst  CMakeLists.txt  Doxyfile  MANIFEST.in  README.md  pyproject.toml  setup.py
helper_modules/: delete_solids_initial_timestep.py  read_input_fromtxt.py  sph_helper.py  sph_info.py
helper_modules/delete_fluid_sphparticles/: delete_fluids_initial_timestep.py
helper_modules/delete_initialfluid_sphparticles/: delete_initialfluids_initial_timestep.py
helper_modules/delete_solid_sphparticles/: delete_solids_initial_timestep.py
helper_modules/gsd2vtu/: auxgsd2vtu.py  export_gsd2vtu.py  export_pgsd2vtu.py  gsd2vtu.py  pgsd2vtu.py  spfgsd2vtu.py  spfpgsd2vtu.py  tpfgsd2vtu.py  tvspfgsd2vtu.py
helper_modules/read_input_from_txt/: read_input_fromtxt.py
hoomd-blue/: .gitignore  BUILDING.rst  CHANGELOG.rst  CMakeCache.txt  CMakeLists.txt
hoomd-blue/hoomd/: Autotuner.h  BondedGroupData.cc  BondedGroupData.h  BoxResizeUpdater.cc  BoxResizeUpdater.h  CMakeLists.txt  CellList.cc  CellList.h  CellListGPU.cc  CellListGPU.cu  CellListGPU.cuh  Communicator.cc  Communicator.h  CommunicatorGPU.cc  CommunicatorGPU.cu  CommunicatorGPU.cuh  CommunicatorGPU.h  ConstForceCompute.cc  ExecutionConfiguration.cc  ExecutionConfiguration.h  ForceCompute.cc  ForceCompute.h  GPUArray.h  GSDDumpWriter.cc  GSDDumpWriter.h  GSDDumpWriterMPI.cc  GSDDumpWriterMPI.h  GSDReader.cc  GSDReaderMPI.cc  GSDReaderMPI.h  Integrator.cc  Integrator.cu  Integrator.cuh  Integrator.h  MPIConfiguration.cc  MPIConfiguration.h  ManagedArray.h  MeshDefinition.cc  MeshDefinition.h  MeshGroupData.cc  (+32 more)
hoomd-blue/hoomd/_sph/: _eos.py  (+14 more)
hoomd-blue/hoomd/nsearch/: CMakeLists.txt  HalfStepHook.cc  NeighborList.cc  NeighborList.h  NeighborListBinned.cc  NeighborListBinned.h  NeighborListGPU.cc  NeighborListGPU.cu  NeighborListGPU.cuh  NeighborListGPU.h  NeighborListGPUBinned.cc  NeighborListGPUBinned.cu  NeighborListGPUBinned.cuh  NeighborListGPUBinned.h  NeighborListGPUStencil.cc  NeighborListGPUStencil.cu  NeighborListGPUStencil.cuh  NeighborListGPUStencil.h  NeighborListGPUTree.cc  NeighborListGPUTree.cu  NeighborListGPUTree.cuh  NeighborListGPUTree.h  NeighborListStencil.cc  NeighborListStencil.h  NeighborListTree.cc  NeighborListTree.h  __init__.py  half_step_hook.py  halt_step_hook.py  module-nsearch.cc  nlist.py
hoomd-blue/hoomd/sph/: CMakeLists.txt  ComputeMechanicalPropTypes.h  ComputeSPFBasicProperties.cc  ComputeSPFBasicProperties.h  ComputeSPFBasicPropertiesGPU.cc  ComputeSPFBasicPropertiesGPU.cu  ComputeSPFBasicPropertiesGPU.cuh  ComputeSPFBasicPropertiesGPU.h  ComputeSPFNNBasicProperties.cc  ComputeSPFNNBasicProperties.h  ComputeSolidProperties.cc  ComputeSolidProperties.h  ComputeSusFBasicProperties.cc  ComputeSusFBasicProperties.h  ComputeSuspendedProperties.cc  ComputeSuspendedProperties.h  ConstantForceCompute.cc  ConstantForceCompute.h  ConstantForceComputeGPU.cc  ConstantForceComputeGPU.cu  ConstantForceComputeGPU.cuh  ConstantForceComputeGPU.h  CustomForceCompute.cc  CustomForceCompute.h  EvaluationMethodDefinition.h  ForceComposite.cc  ForceComposite.h  GeneralGPUFunctions.cu  GeneralGPUFunctions.cuh  GeneralGPUFunctions_test.cu  HalfStepHook.cc  KickDriftKickTV.cc  KickDriftKickTV.h  RigidBodyIntegrator.cc  RigidBodyIntegrator.h  RigidBodyIntegratorGPU.cu  RigidBodyIntegratorGPU.h  SPHBaseClass.cc  SPHBaseClass.cuh  SPHBaseClass.h  (+101 more)
hoomd-blue/hoomd/sph/data/: CMakeLists.txt  __init__.py  local_access.py  local_access_cpu.py  local_access_gpu.py
hoomd-blue/hoomd/sph/methods/: CMakeLists.txt  __init__.py  methods.py  rattle.py
hoomd-blue/hoomd/sph/sphmodel/: CMakeLists.txt  __init__.py  sphmodel.py
sph-simulations/: .gitignore  create_input_geometries_mixer.py
sph-simulations/.ipynb_checkpoints/: evaluate_sph_benchmarks-checkpoint.ipynb
sph-simulations/00_test/: test.py  test2_create.py  test_create.py
sph-simulations/01_create_simulation_from_rawfile/: create_gsd_from_raw_GSD.py  create_gsd_from_raw_multicore.py  create_gsd_from_raw_singlecore.py  input_bcc_N100_phi01.txt  input_bcc_N100_phi02.txt  input_bcc_N100_phi03.txt  input_bcc_N100_phi04.txt  input_bcc_N100_phi05.txt  input_bcc_N100_phi06.txt  input_bcc_N100_phi07.txt  input_bcc_N100_phi08.txt  input_bcc_N100_phi09.txt  input_fcc_N100_phi01.txt  input_fcc_N100_phi02.txt  input_fcc_N100_phi03.txt  input_fcc_N100_phi04.txt  input_fcc_N100_phi05.txt  input_fcc_N100_phi06.txt  input_fcc_N100_phi07.txt  input_fcc_N100_phi08.txt  input_fcc_N100_phi09.txt  run.py
sph-simulations/02_regular_sphere_packings/: run.py  run_spherepacking.py
sph-simulations/03_sphere_in_box/: run.py  run01.sh  run10.sh  run1000.sh  run15.sh  run2.sh  run20.sh  run200.sh  run25.sh  run3.sh  run30.sh  run300.sh  run35.sh  run40.sh  run45.sh  run5.sh  run50.sh  run500.sh  run8.sh  sphere_in_box_create_gsd.py  sphere_in_box_run.py
sph-simulations/06_spherepacking_res/: create_sc.py  run.py  run_spherepacking.py
sph-simulations/07_flow_around_cylinder/: create_long_domain.py  run_long_domain.py
sph-simulations/07_mixer/: create_input_geometries_mixer_original.py  run_mixer.py  run_mixer_original.py
sph-simulations/08_mixer/: create_input_geometries_mixer.py  create_input_geometries_mixer_original_big.py  run_ellipsoid.py  run_mixer_original.py  run_mixer_original_big.py
sph-simulations/09_ellipsoid/: create_input_geometries_ellipsoid.py  create_input_geometries_ellipsoid_test.py  export_vtu.py  run_ellipsoid.py  run_ellipsoid_test.py
sph-simulations/97_io_benchmarks/: create_parallel_gsd_from_raw.py
sph-simulations/99_singlephaseflow_benchmarks/: README.md  evaluate_sph_benchmarks.ipynb  run.sh
(+636 files in other folders)
